Upgrade project to use `Spring Boot 3.3.x`, `Java 21` using openrewrite.